kustomize/org-services/services/php-hello/base/dev-php-hello.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: dev-php-hello
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
